; ModuleID = '/home/carl/AnghaBench/linux/drivers/visorbus/extr_visorchipset.c_visorchipset_exit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/visorbus/extr_visorchipset.c_visorchipset_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, %struct.TYPE_6__*, i32 }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }
%struct.acpi_device = type { i32 }

@chipset_dev = common dso_local global %struct.TYPE_7__* null, align 8
@visorchipset_dev_groups = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.acpi_device*)* @visorchipset_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @visorchipset_exit(%struct.acpi_device* %0) #0 {
  %2 = alloca %struct.acpi_device*, align 8
  store %struct.acpi_device* %0, %struct.acpi_device** %2, align 8
  %3 = call i32 (...) @visorbus_exit()
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** @chipset_dev, align 8
  %5 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 2
  %6 = call i32 @cancel_delayed_work_sync(i32* %5)
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** @chipset_dev, align 8
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 1
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i32, i32* @visorchipset_dev_groups, align 4
  %13 = call i32 @sysfs_remove_groups(i32* %11, i32 %12)
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** @chipset_dev, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @visorchannel_destroy(i32 %16)
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** @chipset_dev, align 8
  %19 = call i32 @kfree(%struct.TYPE_7__* %18)
  ret i32 0
}

declare dso_local i32 @visorbus_exit(...) #1

declare dso_local i32 @cancel_delayed_work_sync(i32*) #1

declare dso_local i32 @sysfs_remove_groups(i32*, i32) #1

declare dso_local i32 @visorchannel_destroy(i32) #1

declare dso_local i32 @kfree(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
